# BA-backup

./: CMakeLists.txt  OLD_paper_solution_odom.bag  README.md  launch_gdp.txt  package.xml  paper_solution_odom.bag  useful_pastes.txt
comparison_data/: complete_num_pyramids1.csv  complete_num_pyramids4.csv  complete_opt_size13.csv  complete_opt_size15.csv  pose_block_size5.csv  pose_epsilon_at_1000_reps0.000000.csv  pose_min_klt_det_distance4.0.csv  pose_min_klt_det_distance7.0.csv  pose_min_klt_features30.csv  pose_min_klt_features50.csv  pose_num_pyramids2.csv  pose_num_pyramids4.csv  pose_opt_size17.csv  pose_opt_size19.csv  pose_quality_level0.01.csv  pose_quality_level0.03.csv  pose_quality_level0.05.csv  pose_quality_level0.1.csv  steps_block_size3.csv  steps_epsilon_at_1000_reps0.000000.csv  steps_min_klt_det_distance5.5.csv  steps_min_klt_det_distance7.0.csv  steps_min_klt_features20.csv  steps_min_klt_features30.csv  steps_min_klt_features50.csv  steps_min_klt_features60.csv  steps_num_pyramids1.csv  steps_num_pyramids2.csv  steps_num_pyramids3.csv  steps_num_pyramids4.csv  steps_opt_size13.csv  steps_opt_size15.csv  steps_opt_size17.csv  steps_opt_size19.csv  steps_opt_size21.csv  steps_quality_level0.005.csv  steps_quality_level0.03.csv
comparison_data_brisk/: best_pose_octaves3.csv  best_pose_pattern_scale1.000000.csv  best_steps_octaves3.csv  best_steps_pattern_scale1.000000.csv  pose_brisk_threshold30.csv  pose_brisk_threshold45.csv  pose_brisk_threshold60.csv  pose_brisk_threshold75.csv  pose_brisk_threshold90.csv  pose_octaves1.csv  pose_octaves2.csv  pose_octaves3.csv  pose_octaves4.csv  pose_octaves5.csv  pose_pattern_scale0.5.csv  pose_pattern_scale1.0.csv  pose_pattern_scale1.5.csv  pose_pattern_scale2.0.csv  pose_pattern_scale2.5.csv  pose_pattern_scale2.500000.csv  steps_brisk_threshold30.csv  steps_brisk_threshold45.csv  steps_brisk_threshold60.csv  steps_brisk_threshold75.csv  steps_brisk_threshold90.csv  steps_octaves1.csv  steps_octaves2.csv  steps_octaves3.csv  steps_octaves4.csv  steps_octaves5.csv  steps_pattern_scale0.5.csv  steps_pattern_scale1.0.csv  steps_pattern_scale1.5.csv  steps_pattern_scale2.0.csv  steps_pattern_scale2.5.csv  steps_pattern_scale2.500000.csv
comparison_data_filters/: feature_number_orb.csv  pose_best1.csv  pose_best2.csv  pose_best3.csv  pose_best4.csv  pose_best5.csv  pose_best_orb.csv  pose_duplicate_filtering_size_1.csv  pose_duplicate_filtering_size_2.csv  pose_duplicate_filtering_size_3.csv  pose_duplicate_filtering_size_4.csv  pose_duplicate_filtering_size_5.csv  pose_max_cos_0.4.csv  pose_max_cos_0.6.csv  pose_max_cos_0.8.csv  pose_max_cos_0.95.csv  pose_max_match_distance_0.2.csv  pose_max_match_distance_0.3.csv  pose_max_match_distance_0.5.csv  pose_max_match_distance_0.7.csv  pose_max_match_distance_1.0.csv  pose_min_kp_distance_0.1.csv  pose_min_kp_distance_0.3.csv  pose_min_kp_distance_0.5.csv  pose_min_kp_distance_1.0.csv  pose_min_kp_distance_1.5.csv  prediction_pose.csv  prediction_steps.csv  steps_best1.csv  steps_best2.csv  steps_best3.csv  steps_best4.csv  steps_best5.csv  steps_best_orb.csv  steps_duplicate_filtering_size_1.csv  steps_duplicate_filtering_size_2.csv  steps_duplicate_filtering_size_3.csv  steps_duplicate_filtering_size_4.csv  steps_duplicate_filtering_size_5.csv  steps_max_cos_0.2.csv  (+13 more)
comparison_data_klt/: best_pose.csv  best_steps.csv  pose_block_size11.csv  pose_block_size3.csv  pose_block_size7.csv  pose_block_size9.csv  pose_criteria_reps10.csv  pose_criteria_reps100.csv  (+39 more)
include/: BRISK.h  (+9 more)
(+259 files in other folders)
